fixed page shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,3 +6,11 @@
 		var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
 		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+html {
+  /*
+  * This makes the page reserve space for the scrollbar so loading states do not shift the page when
+  * the scroll bar is temporarily removed. This makes the page feel so much better.
+  */
+  scrollbar-gutter: stable;
+}
